<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Krantenwijk</string>

    <string name="nav_back">Back</string>

    <string name="home_no_route">Your route will appear here.</string>
    <string name="home_start_round">Start round</string>
    <string name="home_edit_route">Edit route</string>

    <string name="onboarding_title">Welcome</string>
...
    <string name="round_total_leaflets">Leaflets</string>
    <string name="round_street_kicker">Street section %1$d / %2$d</string>
    <plurals name="round_hidden_skipped">
        <item quantity="one">%d house that gets nothing is hidden.</item>
        <item quantity="other">%d houses that get nothing are hidden.</item>
    </plurals>
    <string name="round_previous">Previous</string>
    <string name="round_next">Next</string>
    <string name="round_finish">Finish round</string>
    <string name="round_start_of_route">Start of route</string>
    <string name="round_end_of_route">End of route</string>
    <string name="round_building_back">Back to %1$s</string>

    <!-- Round timer and Finished screen (RND-13, DEC-030) -->
    <string name="round_abandon_title">Abandon this round?</string>
    <string name="round_abandon_message">The time of this round won\'t be saved. If you resume, the time keeps running.</string>
    <string name="round_resume">Resume</string>
    <string name="round_abandon">Abandon</string>
    <string name="home_round_in_progress">Round in progress</string>
    <string name="home_round_in_progress_detail">Started at %1$s · at street section %2$d / %3$d, %4$s</string>
    <string name="home_resume_round">Resume round</string>
    <string name="home_abandon_round">Abandon round</string>
    <string name="home_abandon_message">The time of this round won\'t be saved.</string>
    <string name="finished_eyebrow">Finish · %1$s</string>
...
